Check if user near the loomie
